compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_an_import_preceeding_whitespace.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1340
expression: " import rakun\n\npub fn main() {\n  0\n}"
---
 i|mport rakun

pub fn main() {
  0
}


----- Completion content -----
dep
  kind:   Module
  edits:
    [0:7-0:7]: "dep"
