compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_an_import_with_docs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 985
expression: "import rakun\n\npub fn main() {\n  0\n}"
---
import rak|un

pub fn main() {
  0
}


----- Completion content -----
dep
  kind:   Module
  edits:
    [0:7-0:7]: "dep"
